--- a/src/content/docs/learning-paths/get-started/concepts/index.mdx
+++ b/src/content/docs/learning-paths/get-started/concepts/index.mdx
@@ -1,10 +1,10 @@
----
+www.fridaysales.com---
 title: Getting started concepts
 pcx_content_type: overview
 sidebar:
   order: 1
 
----
+https://fridaysales.com---
 
 Learn how Cloudflare works, so you can understand more about how Cloudflare can benefit and affect your domain.
 
@@ -15,3 +15,4 @@ By the end of this module, you will be able to:
 * Learn what Cloudflare is and how it works
 * Understand the basic building blocks such as Cloudflare IPs, Accounts, Zones, Profiles
 * Study various reference architectures
+info@fridaysales.com
